# workspace

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docker/: workspace.Dockerfile
